--- a/package.json
+++ b/package.json
@@ -35,9 +35,11 @@
     "postversion": "git push --follow-tags && npm run auto release"
   },
   "dependencies": {
-    "@inubekit/foundations": "^1.1.2",
+    "@inubekit/foundations": "^2.7.0",
     "@inubekit/hooks": "^1.1.0",
-    "@inubekit/stack": "^1.1.0",
+    "@inubekit/stack": "^2.0.0"
+  },
+  "peerDependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "styled-components": "^6.1.8"
