--- a/package.json
+++ b/package.json
@@ -32,12 +32,17 @@
     "auto": "auto",
     "changelog": "npm run auto changelog",
     "version": "rm -rf dist && npm run build",
-    "release": "git push --follow-tags && npm run auto release"
+    "release": "git push --follow-tags && npm run auto release",
+    "autorelease": "auto shipit"
+  },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/",
+    "access": "public"
   },
   "dependencies": {
     "@inubekit/foundations": "^2.7.0",
     "@inubekit/hooks": "^1.1.0",
-    "@inubekit/stack": "^2.0.0"
+    "@inubekit/stack": "^2.1.1"
   },
   "peerDependencies": {
     "react": "^18.2.0",
@@ -74,5 +79,14 @@
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/selsa-inube/inubekit-blanket.git"
+  },
+  "auto": {
+    "plugins": [
+      "npm"
+    ]
   }
 }
